Displaying a clear, user-friendly message indicating that the node does not exist, instead of endlessly attempting to load the content.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -140,6 +140,7 @@
   "connecting": "Connecting",
   "content-hidden-in-google-play": "All content is hidden in Android (Google Play)",
   "content-not-accessible-android": "This content is not accessible on Android",
+  "content-not-found": "Content is not found",
   "content-unhidden-in-google-play": "All content is unhidden in Android (Google Play)",
   "continue": "Continue",
   "continue-reading": "Continue Reading →",
@@ -501,6 +502,7 @@
   "no-block": "Do not block",
   "no-blocking": "No blocking.",
   "node-name-not-exists": "No node with such name exist.",
+  "node-not-found-content-cannot-loaded": "The blog is not found or content cannot be loaded",
   "node-settings-changed-conflict": "Blog settings were changed by somebody.",
   "node-url-not-found": "Node URL not found",
   "no-kick": "Do not kick",
