--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -140,6 +140,7 @@
   "connecting": "Łączenie",
   "content-hidden-in-google-play": "Cała treść jest ukryta na Androidzie (Google Play)",
   "content-not-accessible-android": "Ten kontent nie jest dostępny na Androidzie",
+  "content-not-found": "Zawartość nieznaleziona",
   "content-unhidden-in-google-play": "Cała treść jest ukryta na Androidzie (Google Play) jest widoczna na Androidzie (Google Play)",
   "continue": "Kontynuuj",
   "continue-reading": "Kontynuuj czytanie →",
@@ -501,6 +502,7 @@
   "no-block": "Nie blokuj",
   "no-blocking": "Brak blokowania.",
   "node-name-not-exists": "Nie istnieje węzeł o takiej nazwie.",
+  "node-not-found-content-cannot-loaded": "Nie znaleziono bloga lub nie można załadować treści",
   "node-settings-changed-conflict": "Ustawienia bloga zostały zmienione przez kogoś innego.",
   "node-url-not-found": "URL węzła nie znaleziono",
   "no-kick": "Nie wyrzucaj",
