--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -140,6 +140,7 @@
   "connecting": "Подключение",
   "content-hidden-in-google-play": "Весь контент скрыт в Android (Google Play)",
   "content-not-accessible-android": "Этот контент недоступен на Android",
+  "content-not-found": "Контент не найден",
   "content-unhidden-in-google-play": "Весь контент раскрыт в Android (Google Play)",
   "continue": "Продолжить",
   "continue-reading": "Читать дальше →",
@@ -501,6 +502,7 @@
   "no-block": "Не блокировать",
   "no-blocking": "Нет блокировки.",
   "node-name-not-exists": "Не существует блога с таким именем.",
+  "node-not-found-content-cannot-loaded": "Блог не найден или контент не может быть загружен",
   "node-settings-changed-conflict": "Настройки блога были кем-то изменены.",
   "node-url-not-found": "URL узла не найден",
   "no-kick": "Не выгонять",
