--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -140,6 +140,7 @@
   "connecting": "Підключення",
   "content-hidden-in-google-play": "Весь контент приховано у Android (Google Play)",
   "content-not-accessible-android": "Цей контент недоступний на Android",
+  "content-not-found": "Контент не знайдено",
   "content-unhidden-in-google-play": "Весь контент розкрито у Android (Google Play)",
   "continue": "Продовжити",
   "continue-reading": "Читати далі →",
@@ -501,6 +502,7 @@
   "no-block": "Не блокувати",
   "no-blocking": "Немає блокування.",
   "node-name-not-exists": "Не існує блогу з цим ім'ям.",
+  "node-not-found-content-cannot-loaded": "Блог не знайдено або контент не може бути завантажений",
   "node-settings-changed-conflict": "Налаштування блога були кимось змінені.",
   "node-url-not-found": "URL вузла не знайдено",
   "no-kick": "Не виганяти",
