--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -1114,7 +1114,7 @@
   "used-by-addon": "Used by add-on:",
   "user-asks-not-publish-complaint": "User asks not to publish the complaint",
   "user-comments-hidden": "This user's comments are hidden",
-  "user-havent-posted-anything": "User haven't posted anything yet",
+  "user-hasnt-posted-anything": "User hasn't posted anything yet",
   "validating-access-request": "Validating access request",
   "verification-code": "Verification code",
   "verify-signature": "Verify signature",
