Add support for configuring email language in settings. Update email language from the client language.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -877,6 +877,8 @@
       "comment_max-size_soft": "Maximal size of comments",
       "comment_revision_lifetime": "Purge old comment revisions after",
       "credentials-reset_token_lifetime": "Invalidate code for resetting a password after",
+      "email_language": "Language of e-mails",
+      "explore_lifetime": "Purge Explore feed after",
       "feed_width": "Feed width (in pixels)",
       "friend-ofs_view": "List of added me as a friend is visible to",
       "friend-ofs_view-total": "Number of added me as a friend is visible to",
