Make possible to specify style for details summary in the visual and Markdown editor. The available styles are normal, bold, and any level of heading.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -312,7 +312,7 @@
   "go-to": "Go to",
   "go-top": "Go to the top",
   "grant-access": "Grant Access",
-  "heading": "Heading",
+  "heading": "Heading {level}",
   "height": "Height",
   "help": "Help",
   "hide": "Hide",
@@ -1016,6 +1016,7 @@
   },
   "story-type-turned-off": "Turned off {type}",
   "strikeout": "Strikeout",
+  "style": "Style",
   "subscribe": "Subscribe",
   "subscribe-back": "Subscribe back",
   "subscribed": "Subscribed",
