--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -312,7 +312,7 @@
   "go-to": "Przejdź do",
   "go-top": "Przejdź na górę",
   "grant-access": "Przyznanie dostępu",
-  "heading": "Nagłówek",
+  "heading": "Nagłówek {level}",
   "height": "Wysokość",
   "help": "Pomoc",
   "hide": "Ukryj",
@@ -1016,6 +1016,7 @@
   },
   "story-type-turned-off": "Wyłączono {type}",
   "strikeout": "Przekreślenie",
+  "style": "Styl",
   "subscribe": "Subskrybuj",
   "subscribe-back": "Subskrybuj z powrotem",
   "subscribed": "Zasubskrybowano",
