--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -312,7 +312,7 @@
   "go-to": "Перейти",
   "go-top": "Перейти вверх",
   "grant-access": "Предоставление доступа",
-  "heading": "Заголовок",
+  "heading": "Заголовок {level}",
   "height": "Высота",
   "help": "Помощь",
   "hide": "Скрыть",
@@ -1016,6 +1016,7 @@
   },
   "story-type-turned-off": "Выключены {type}",
   "strikeout": "Зачёркнутый",
+  "style": "Стиль",
   "subscribe": "Подписаться",
   "subscribe-back": "Подписаться в ответ",
   "subscribed": "{gender, select, female {Подписана} other {Подписан}}",
