--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -312,7 +312,7 @@
   "go-to": "Перейти",
   "go-top": "Перейти догори",
   "grant-access": "Надання доступу",
-  "heading": "Заголовок",
+  "heading": "Заголовок {level}",
   "height": "Висота",
   "help": "Допомога",
   "hide": "Приховати",
@@ -1016,6 +1016,7 @@
   },
   "story-type-turned-off": "Вимкнено {type}",
   "strikeout": "Закреслений",
+  "style": "Стиль",
   "subscribe": "Підписатись",
   "subscribe-back": "Підписатись у відповідь",
   "subscribed": "{gender, select, female {Підписана} other {Підписаний}}",
