--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -477,7 +477,7 @@
   "my-node": "Mój blog",
   "my-profile": "Mój profil",
   "name": "Nazwa",
-  "name-already-taken": "Nazwa jest już zajęta. Zauważ, że możesz dodać do nazwy dowolną liczbę (np. 'Arthur_42')",
+  "name-already-taken": "Nazwa jest już zajęta. Zauważ, że możesz dodać do nazwy dowolną liczbę (np. 'Arthur42')",
   "named-key": "Klucz nazwy",
   "name-help": "Nazwa musi mieć 4-120 znaków. Dozwolone są wszystkie znaki, z wyjątkiem białych znaków i interpunkcji. Dozwolona interpunkcja: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
   "name-not-allowed": "Nazwa jest niedozwolona",
