--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -477,7 +477,7 @@
   "my-node": "Мой блог",
   "my-profile": "Мой профиль",
   "name": "Имя",
-  "name-already-taken": "Имя уже занято. Но вы можете добавить к имени любое число (например, 'Arthur_42')",
+  "name-already-taken": "Имя уже занято. Но вы можете добавить к имени любое число (например, 'Arthur42')",
   "named-key": "Именной ключ",
   "name-help": "Имя должно быть длиной 4-120 символов. Разрешены все символы, кроме пробелов и знаков препинания. Разрешенные знаки препинания: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
   "name-not-allowed": "Недопустимое имя",
