--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -477,7 +477,7 @@
   "my-node": "Мій блог",
   "my-profile": "Мій профіль",
   "name": "Ім'я",
-  "name-already-taken": "Ім'я вже зайняте. Але ви можете додати до імені будь-яке число (наприклад, 'Arthur_42')",
+  "name-already-taken": "Ім'я вже зайняте. Але ви можете додати до імені будь-яке число (наприклад, 'Arthur42')",
   "named-key": "Іменний ключ",
   "name-help": "Ім'я повинно містити від 4 до 120 символів. Усі символи дозволені, окрім пробілів та розділових знаків. Дозволені розділові знаки: <0>!</0> <0>*</0> <0>-</0> <0>.</0>",
   "name-not-allowed": "Неприпустиме ім'я",
